# Panda

./: .clang-format  .gitignore  AUTHORS.md  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  Readme.md
Examples/Baobab/: CMakeLists.txt
Examples/Baobab/src/: Main.cpp
Examples/Baobab/src/AssetHandler/: GameAssetHandler.hpp
Examples/Baobab/src/Components/: BlocksCreation.cpp  BlocksCreation.hpp  CameraMove.cpp  CameraMove.hpp  FullScreenToggle.cpp  FullScreenToggle.hpp
Examples/Baobab/src/Layer/: BaseLayer.cpp  BaseLayer.hpp
Examples/Baobab/src/Levels/: BaseLevel.cpp  BaseLevel.hpp
Examples/Baobab/src/Model/: Chunk.cpp  Chunk.hpp  ChunksStorage.cpp  ChunksStorage.hpp  PerlinNoise.cpp  PerlinNoise.hpp  Vertex.hpp  Voxel.hpp  VoxelMeshGenerator.cpp  VoxelMeshGenerator.hpp  VoxelTextureMapper.hpp
Examples/HelloCanvas/: CMakeLists.txt
Examples/HelloCanvas/native/OSX/: Info.plist
Examples/HelloCanvas/src/: ExampleLayer.cpp  ExampleLayer.hpp  ExampleLevel.cpp  ExampleLevel.hpp  GameAssetHandler.hpp  Main.cpp  OrthographicCameraMove.cpp  OrthographicCameraMove.hpp  ParticlesEmitter.cpp  ParticlesEmitter.hpp
Examples/HelloCube/: CMakeLists.txt
Examples/HelloCube/src/: CubeLayer.cpp  CubeLayer.hpp  CubeLevel.cpp  Main.cpp
Examples/HelloTriangle/: CMakeLists.txt
Examples/HelloTriangle/resources/desktop/: base.frag  base.vert
Examples/HelloTriangle/src/: Main.cpp  TriangleLayer.cpp  TriangleLayer.hpp  TriangleLevel.cpp  TriangleLevel.hpp
Fern/: CMakeLists.txt
Fern/include/Fern/: Fern.hpp
Fern/include/Fern/Base/: Base.hpp
Fern/include/Fern/Events/: Event.hpp  EventQueue.hpp  Key.hpp  KeyEvents.hpp  MouseEvents.hpp  TouchEvents.hpp  WindowEvents.hpp
Fern/include/Fern/GraphicsContext/: GraphicsContext.hpp
Fern/include/Fern/Platform/: PlatformSystem.hpp
Fern/include/Fern/Window/: Cursor.hpp  Window.hpp
Fern/src/Fern/: Fern.cpp
Fern/src/Fern/Events/: EventQueue.cpp
Miren/: CMakeLists.txt
Miren/include/Miren/: Base.hpp  Config.hpp  GraphicsContext.hpp  Miren.hpp  MirenStates.hpp  PlatformData.hpp  Vertex.hpp  VertexBufferLayoutData.hpp
Miren/src/Miren/: GraphicsContext.hpp  HandleAllocator.hpp  Miren.cpp  MirenHandleAllocator.cpp  MirenHandleAllocator.hpp  MirenStates.hpp  Miren_p.hpp  PlatformData.cpp  RendererI.hpp
Miren/src/Miren/CommandBuffer/: CommandQueue.cpp  CommandQueue.hpp  Frame.cpp  Frame.hpp  RenderDraw.hpp  RendererCommand.hpp  Uniform.hpp
Miren/src/Miren/Encoder/: Frame.cpp  Frame.hpp  PassInput.hpp  RenderDraw.hpp  RenderPass.hpp  RenderPassInputs.hpp  RendererCommand.hpp  Uniform.hpp  UniformBuffer.hpp  View.hpp
MirenTools/: CMakeLists.txt
MirenTools/include/: MirenTools.hpp  ShaderReflectionData.hpp
MirenTools/src/: MirenTools.cpp
Panda/: CMakeLists.txt
Panda/Main/iOS/: main.m
Panda/cmake/: add_app.cmake  platform.cmake  target_platform_app.cmake
Panda/include/: Panda.hpp
Panda/include/Panda/Application/: Application.hpp  ApplicationStartupSettings.hpp  Layer.hpp  LayerStack.hpp  RunApp.hpp
Panda/include/Panda/Assets/: Asset.hpp  AssetHandler.hpp  AssetLoader.hpp  AssetLoaderEditor.hpp  AssetManager.hpp  DynamicMeshAsset.hpp  GpuProgramAsset.hpp  MaterialAsset.hpp  MeshAsset.hpp  ShaderAsset.hpp  StaticMeshAsset.hpp  StaticResources.hpp  Texture.hpp  TextureAsset.hpp
Panda/include/Panda/Base/: Base.hpp  FileBase.hpp
Panda/include/Panda/Events/: Event.hpp  (+6 more)
Panda/src/: Panda.hpp  pndpch.cpp  pndpch.hpp
PandaUI/: CMakeLists.txt
PandaUI/include/PandaUI/: Base.hpp  Context.hpp  Dimension.hpp  PandaUI.hpp  UICamera.hpp  UIRenderer.hpp  UIView.hpp  View.hpp
PandaUI/src/PandaUI/: Config.hpp  Context.cpp  PandaUI.cpp  UIRenderer.cpp  UIView.cpp  View.cpp
Rain/: CMakeLists.txt  Radme.md
Rain/Examples/Example12/: main.cpp
Rain/Examples/Example13/: CMakeLists.txt  main.cpp
Rain/Examples/Example14/: CMakeLists.txt  main.cpp
Rain/Examples/Example15/: CMakeLists.txt  main.cpp
Rain/Examples/Example16/: CMakeLists.txt  main.cpp
Rain/Examples/Example17/: CMakeLists.txt  main.cpp
Rain/Examples/Example3/: main.cpp
Rain/Examples/Example4/: main.cpp
Rain/include/Rain/: Base.hpp  Coder.hpp  GlobalData.hpp  Rain.hpp  Serializer.hpp  TypeInfo.hpp  TypeInfoCreate.hpp  TypeRegistry.hpp  UUID.hpp
Rain/src/: GlobalData.cpp  Primitives.cpp  Primitives.hpp  RapidJsonImpl.cpp  UUID.cpp
Rain/src/Encoders/: JsonDecoder.cpp  JsonEncoder.cpp  YamlDecoder.cpp  YamlEncoder.cpp
Sandbox/: CMakeLists.txt
Sandbox/cmake/: target_platform_app.cmake
Sandbox/src/: Sandbox.cpp  sndbxpch.cpp  sndbxpch.hpp
Sandbox/src/Components/: BlocksCreation.cpp  BlocksCreation.hpp  CameraMove.cpp  CameraMove.hpp  FullScreenToggle.cpp  FullScreenToggle.hpp
Sandbox/src/Levels/: BaseLevel.cpp  BaseLevel.hpp  CubeLevel.cpp  CubeLevel.hpp  TriangleLevel.cpp  TriangleLevel.hpp
Sandbox/src/Model/: Chunk.cpp  Chunk.hpp  ChunksStorage.cpp  ChunksStorage.hpp  PerlinNoise.cpp  Voxel.hpp  VoxelMeshGenerator.cpp  VoxelMeshGenerator.hpp  VoxelRaycastData.hpp
ScriptCoreCpp/: CMakeLists.txt  Readme.md  ScriptCoreCpp.def
ScriptCoreCpp/include/: Logger.hpp  OuterScriptHook.hpp  ScriptClass.hpp  ScriptCore.hpp  ScriptRegistry.hpp
ScriptCoreCpp/include/Bamboo/: Application.hpp  Bamboo.hpp  Base.hpp  Component.hpp  Entity.hpp  Input.hpp  Key.hpp  Logger.hpp  Math.hpp  Script.hpp  Texture.hpp  World.hpp
ScriptCoreCpp/include/Manifest/: ScriptClassManifest.hpp  ScriptFieldType.hpp
ScriptCoreCpp/include/Panda/: Application.hpp  Base.hpp  Component.hpp  Entity.hpp  Input.hpp  Key.hpp  Script.hpp  ScriptClass.hpp  ScriptRegistry.hpp  World.hpp
ScriptCoreCpp/src/: Logger.cpp  OuterScriptHook.cpp  OuterScriptHook.hpp  ScriptClassMaper.hpp  ScriptRegistry.cpp
ScriptCoreCpp/src/Bamboo/: Application.cpp  Bamboo.cpp  Component.cpp  Entity.cpp  Input.cpp  Logger.cpp  Math.cpp  Texture.cpp  World.cpp
ScriptCoreCpp/src/Panda/: Application.cpp  Entity.cpp  Input.cpp  OuterScriptHook.cpp  OuterScriptHook.hpp  ScriptClassMaper.hpp  ScriptRegistry.cpp  World.cpp
TestProject/: CMakeLists.txt
TestProject/src/: SampleScript.cpp  SampleScript.hpp
(+664 files in other folders)
